--- a/diff_dice/templates/diff_dice/Q2A.html
+++ b/diff_dice/templates/diff_dice/Q2A.html
@@ -15,7 +15,7 @@
     <b> {{ rand_num }} </b>
     元, 以
     <b> 避免 </b>
-   未选择的彩票({{ lottery_not_chosen }})和您已经选择的彩票({{ lottery_chosen }})同时开奖？
+   未选择的{{ lottery_not_chosen }}和您已经选择的{{ lottery_chosen }}同时开奖？
 </p>
 
 
