--- a/diff_dice/templates/diff_dice/Start.html
+++ b/diff_dice/templates/diff_dice/Start.html
@@ -34,8 +34,8 @@
     <b class="blue-text"> 蓝色骰子 </b>
     , 编号从1到6。
     <p>
-    如果骰子产生的数字是1、2或者3, 彩票C将为您赢得0元；
-    <p>如果骰子产生的数字是4、5或者6, 彩票C将为您赢得10元。
+    如果骰子产生的数字是1、2或者3, 彩票D将为您赢得0元；
+    <p>如果骰子产生的数字是4、5或者6, 彩票D将为您赢得10元。
 </p>
 
 <img src="{% static 'images/blue_dice.jpg' %}" style="display: block; margin: auto;">
