--- a/diff_dice/templates/diff_dice/Q2C.html
+++ b/diff_dice/templates/diff_dice/Q2C.html
@@ -13,12 +13,12 @@
 <p align="justify">
     根据您之前的选择,
     <b> 电脑已经分别投掷了蓝色和红色的骰子 </b>
-    ，您未选择的彩票({{ lottery_not_chosen }})和您已经选择的彩票({{ lottery_chosen }})都已经开奖。
+    ，您未选择的{{ lottery_not_chosen }}和您已经选择的{{ lottery_chosen }}都已经开奖。
     请问您是否愿意支付
     <b> {{ rand_num }} </b>
     元, 以
     <b> 避免 </b>
-   知道未选择的彩票({{ lottery_not_chosen }})所产生的结果？
+   知道未选择的{{ lottery_not_chosen }}所产生的结果？
 </p>
 
 
