--- a/diff_dice/templates/diff_dice/StartB.html
+++ b/diff_dice/templates/diff_dice/StartB.html
@@ -16,7 +16,8 @@
     您未选择的{{ lottery_not_chosen }}和您已选择的{{ lottery_chosen }}同时开奖。
     <p> 实验结束后,
    <b> 电脑将随机选取您做的某一个选择来决定您未选择的{{ lottery_not_chosen }}和您已选择的{{ lottery_chosen }}是否同时开奖 </b>
-。您的选择将直接影响到您的最终收入以及开奖的形式。如果选择愿意支付指定费用，那么该金额将从您的最终收入中相应扣除。如果选择不愿意，那么您的最终收入保持不变。
+    。
+    <p>您的选择将直接影响到您的最终收入以及开奖的形式。如果选择愿意支付指定费用，那么该金额将从您的最终收入中相应扣除。如果选择不愿意，那么您的最终收入保持不变。
 </p>
 
 
