--- a/diff_dice/templates/diff_dice/StartC.html
+++ b/diff_dice/templates/diff_dice/StartC.html
@@ -17,7 +17,7 @@
     您未选择的{{ lottery_not_chosen }}和您已选择的{{ lottery_chosen }}同时开奖。
     <p> 实验结束后,
    <b> 将随机选取您所做的某个选择来决定您是否被同时告知您选择的{{ lottery_chosen }}和未选择的{{ lottery_not_chosen }}所产生的结果。 </b>
-    您的选择将直接影响到您的最终收入以及开奖的形式。如果选择愿意支付指定费用，那么该金额将从您的最终收入中相应扣除。如果选择不愿意，那么您的最终收入保持不变。
+    <p>您的选择将直接影响到您的最终收入以及开奖的形式。如果选择愿意支付指定费用，那么该金额将从您的最终收入中相应扣除。如果选择不愿意，那么您的最终收入保持不变。
 </p>
 
 
