--- a/reward_page/templates/reward_page/SameFirstReward.html
+++ b/reward_page/templates/reward_page/SameFirstReward.html
@@ -54,7 +54,7 @@
 
 {% if same_lottery_chosen == "彩票A" %}
     <p align="justify">
-    如果骰子产生的数字是1或2, 彩票A将为您赢得10元, 彩票B}将为您赢得
+    如果骰子产生的数字是1或2, 彩票A将为您赢得10元, 彩票B将为您赢得
         <b> {{ same_payoff_low }} </b>
         元。
     </p>
