--- a/same_dice/templates/same_dice/Q3.html
+++ b/same_dice/templates/same_dice/Q3.html
@@ -20,7 +20,7 @@
 
 {% if lottery_chosen == "彩票A" %}
     <p align="justify">
-    如果骰子产生的数字是1或2, 彩票A将为您赢得10元, 彩票B}将为您赢得
+    如果骰子产生的数字是1或2, 彩票A将为您赢得10元, 彩票B将为您赢得
         <b> {{ payoff_low }} </b>
         元。
     </p>
